# PiJuPyPrefs

./: LICENSE  README.md  setup.cfg  setup.py
pijupy/: __init__.py  my_jupyter.py  my_matplotlib.py  my_pandas.py
