[metadata]
name = PiJuPyPrefs
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = Jupyter Python Preferences
long_description = file: README.md
url = https://github.com/Who8MyLunch/PiJuPyPrefs
keywords = Juyter, Python, preferences

[options]
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True
